# jean-loup

./: .gitignore  README.md  build-chroot  jean-loup
libcamera-git/: PKGBUILD
timelapse/: .pdm-python  Makefile  pyproject.toml
timelapse-website-ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
timelapse-website-ui/src/: App.tsx  Camera.tsx  Config.tsx  Content.tsx  Gallery.tsx  Layout.tsx  Picture.tsx  Root.tsx  Settings.tsx  Sidebar.tsx  Spinner.tsx  Timelapse.tsx  client.ts  index.css  models.ts  utils.tsx
timelapse-website-ui/timelapse-website-ui/: package-lock.json  package.json
timelapse-website-ui/timelapse-website-ui/src/: App.tsx  Client.tsx
timelapse/.ruff_cache/0.1.12/: 4967880085156132980
timelapse/src/timelapse/: __main__.py  app.py  camera.py  capabilities.py  config.py  controller.py  event.py  event_type.py  hotspot.py  logging.py  picture_purpose.py  pisugar.py  settings.py  state.py  system.py  website.py  website2.py
timelapse/src/timelapse/apps/cli/: __init__.py  app.py
timelapse/src/timelapse/apps/cli/commands/: __init__.py  handle_event.py  power_off.py  take_picture.py
timelapse/src/timelapse/apps/hotspot/: __init__.py  app.py  hotspot.py
timelapse/src/timelapse/apps/website/: __init__.py  app.py  endpoint_type.py  website.py
timelapse/src/timelapse/apps/website/endpoints/: __init__.py  api.py  ui.py
timelapse/src/timelapse/cli/: __init__.py  app.py  cli.py
timelapse/src/timelapse/cli/commands/: __init__.py  handle_event.py  hotspot.py  power_off.py  take_picture.py  website.py
timelapse/src/timelapse/config/: config.py
timelapse/src/timelapse/config/values/: __init__.py  config_values.py  hotspot.py  pi_sugar.py  time_lapse.py  website.py
timelapse/src/timelapse/controller/: __init__.py  controller.py  music.m4a
timelapse/src/timelapse/logging/: __init__.py  debug.py  info.py  warn.py
timelapse/src/timelapse/models/: __init__.py  event_type.py  picture.py  picture_format.py  picture_id.py  picture_intent.py
timelapse/src/timelapse/service/: __init__.py  service.py
timelapse/src/timelapse/services/: __init__.py  camera.py  pi_sugar.py  storage.py  system.py
timelapse/src/timelapse/tools/: __init__.py
timelapse/src/timelapse/tools/camera/: __init__.py  camera.py  default_camera.py
timelapse/src/timelapse/types_for_pydantic/: __init__.py  date_time.py  ipv4_address.py  ipv4_network.py  path.py  time.py
timelapse/tests/: conftest.py  fakes.py  mocks.py  test_config.py  test_controller.py  test_website.py
timelapse_BACKUP/: .pdm-python
timelapse_BACKUP/packages.egg-info/: PKG-INFO  SOURCES.txt
