[project]
name = "timelapse"
version = "0.1.0"
description = "Timelapse"
authors = [
    { name = "Radium226", email = "ra@di.um" },
]
dependencies = [
    "pendulum>=3.0.0",
    "click>=8.1.7",
    "click-default-group>=1.2.4",
    "cherrypy>=18.9.0",
]
requires-python = ">=3.11"
readme = "README.md"

[project.license]
text = "MIT"

[project.scripts]
timelapse = "timelapse:app"

[project.optional-dependencies]
dev = [
    "ruff>=0.1.12",
    "mypy>=1.8.0",
    "pytest>=7.4.4",
]
[build-system]
requires = [
    "pdm-backend",
]
build-backend = "pdm.backend"

[[tool.mypy.overrides]]
module = "click_default_group.*"
ignore_missing_imports = true