[project]
name = "timelapse"
version = "0.1.0"
description = "Timelapse"
authors = [
    { name = "Radium226", email = "ra@di.um" },
]
dependencies = [
    "pendulum>=3.0.0",
    "click>=8.1.7",
    "click-default-group>=1.2.4",
    "cherrypy>=18.9.0",
    "routes>=2.5.1",
]
requires-python = ">=3.11"
readme = "README.md"

[project.license]
text = "MIT"

[project.scripts]
timelapse = "timelapse:app"

[project.optional-dependencies]
dev = [
    "ruff>=0.1.12",
    "mypy>=1.8.0",
    "pytest>=7.4.4",
]
[build-system]
requires = [
    "pdm-backend",
]
build-backend = "pdm.backend"

[tool.mypy]
warn_return_any = true
warn_unused_configs = true


[[tool.mypy.overrides]]
module = "click_default_group.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "cherrypy.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--capture=no"
testpaths = [
    "tests",
]